# messaging-service

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .jjignore  .trivyignore  CHANGELOG.md  Cargo.toml  DISTRIBUTION.md  Dockerfile  GO_CONVERSION_PLAN.md  Makefile  README.md  docker-compose.yml  init.sql
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  logging.rs
crates/core/src/conversations/: key.rs  logging.rs  metrics.rs  mod.rs  normalize_email.rs  normalize_phone.rs  snippet.rs  (+1 more)
crates/db-migrate/: Cargo.toml  build.rs
crates/db-migrate/migrations_sqlx/: 0001_create_core_tables.down.sql  0001_create_core_tables.up.sql  0002_create_dedup_tables.down.sql  0002_create_dedup_tables.up.sql  0003_add_indexes.down.sql  0003_add_indexes.up.sql  0004_triggers_audit_utc.down.sql  0004_triggers_audit_utc.up.sql  0005_views.down.sql  0005_views.up.sql  0006_queue_inbound_events.down.sql  0006_queue_inbound_events.up.sql  0007_alter_inbound_events_unified.down.sql  0007_alter_inbound_events_unified.up.sql  0008_messages_body_attachments.down.sql  0008_messages_body_attachments.up.sql  0009_fix_attachment_urls_and_links.down.sql  0009_fix_attachment_urls_and_links.up.sql  0010_message_bodies_dedup.down.sql  0010_message_bodies_dedup.up.sql  0011_fix_attachment_urls_id_default.down.sql  0011_fix_attachment_urls_id_default.up.sql  0012_update_conversation_messages_view.down.sql  0012_update_conversation_messages_view.up.sql  0013_update_conversation_messages_view_fallback.down.sql  0013_update_conversation_messages_view_fallback.up.sql  0014_add_conversation_key_columns.down.sql  0014_add_conversation_key_columns.up.sql  0015_add_messages_conversation_fk.down.sql  0015_add_messages_conversation_fk.up.sql  0016_add_message_direction_check.down.sql  0016_add_message_direction_check.up.sql
crates/db-migrate/src/: backfill_conversation_refs.rs  backfill_conversations.rs  main.rs
crates/db-migrate/tests/: smoke.rs
crates/server/: Cargo.toml
crates/server/config/: default.toml
crates/server/src/: config.rs  errors.rs  lib.rs  logging.rs  main.rs  metrics.rs  snippet.rs  types.rs
crates/server/tests/: deterministic.rs  deterministic_integration.rs  dispatch_routing.rs  health.rs  invalid_routing.rs  port_conflict.rs  provider_breaker_isolation.rs  provider_breakers.rs  provider_registry.rs  shutdown.rs  webhook_inbound.rs
(+255 files in other folders)
