[package]
name = "messaging-core"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "chrono"] }

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.12.0"
