[package]
name = "db-migrate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "db-migrate"
path = "src/main.rs"

[dependencies]
anyhow = "1"
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# SQLx with Postgres driver
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
# For timestamped migration filenames
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
