[package]
name = "messaging-server"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.8.6"
messaging-core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1.41"

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tracing-subscriber = "0.3.20"
