[package]
name = "messaging-server"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.8.6"
messaging-core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1.41"
uuid = { version = "1.8.0", features = ["v4"] }
toml = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "json"] }

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tracing-subscriber = "0.3.20"
